typography: made fonts larger throughout page, _typography.scss

--- a/saved.html
+++ b/saved.html
@@ -19,12 +19,12 @@
             <li>
               <a href="#work">Work</a>
             </li>
+            <li>
+              <a href="#about">About</a>
+            </li>
               <li>
                 <a href="assets/resume/DJBResume_WebDev.pdf" target="_blank">Resume</a>
               </li>
-                <li>
-                  <a href="#about">About</a>
-                </li>
             <li>
               <a href="https://www.linkedin.com/in/daniel-beccaria-29270293/" target="_blank">
                 LinkedIn
@@ -43,6 +43,7 @@
       <section id="intro" class="wrapper style1 fullscreen fade-up">
         <div class="inner">
             <h1>Daniel Beccaria</h1>
+            <h3 class="title-info">Front End Web Development</h3>
             <ul class="actions">
               <li>
                 <a href="#work" class="button primary large">See My Work</a>
@@ -53,9 +54,46 @@
         <section id="work" class="wrapper style1-alt works">
           <!-- Works Here -->
         </section>
-        <section id="about" class="wrapper style2">
+        <section id="about" class="wrapper style1">
           <div class="inner">
             <h2>About</h2>
+            <p>Staying up to date with current front-end technology while sticking with what works. Always
+            curious to try new tech and apply different approaches. I find the process of creating
+            functioning web applications
+            consistently rewarding.</p>
+            <h2>What I Do:</h2>
+            <div class="features">
+              <section>
+                <i class="icon-dark major fab fa-html5"></i>
+                <i class="icon-dark major fab fa-css3"></i>
+                <i class="icon-dark major fab fa-js"></i>
+                <p>Create responsive web pages with html, css, and javascript.</p>
+              </section>
+              <section>
+                <i class="icon-dark major fab fa-react"></i>
+                <i class="icon-dark major fab fa-node-js"></i>
+                <p>Build REST API's and user interfaces with React and NodeJS.</p>
+              </section>
+              <section>
+                <i class="icon-dark major fas fa-database"></i>
+                <p>CRUD operations with MongoDB (or SQL).</p>
+              </section>
+              <section>
+                <i class="icon-dark major fas fa-user-friends"></i>
+                <i class="icon-dark major fas fa-clipboard-list"></i>
+                <i class="icon-dark major fas fa-angle-double-right"></i>
+                <p>Collaborate with others where possible</p>
+              </section>
+              <section>
+                <i class="icon-dark major fas fa-layer-group"></i>
+                <i class="icon-dark major fas fa-laptop"></i>
+                <p>Choose the right stack for the right project</p>
+              </section>
+              <section>
+                <i class="icon-dark major far fa-smile"></i>
+                <p>Maintain a positive mindset on the search for efficient and clear solutions to complex problems</p>
+              </section>
+            </div>
           </div>
         </section>
    </main>
