scrolling: added smooth scroll to work, about, and see more buttons

--- a/saved.html
+++ b/saved.html
@@ -17,10 +17,10 @@
         <nav>
           <ul>
             <li>
-              <a href="#work">Work</a>
+              <a href="#work" class="sidebar-link">Work</a>
             </li>
             <li>
-              <a href="#about">About</a>
+              <a href="#about" class="sidebar-link">About</a>
             </li>
               <li>
                 <a href="assets/resume/DJBResume_WebDev.pdf" target="_blank">Resume</a>
@@ -46,7 +46,7 @@
             <h3 class="title-info">Front End Web Development</h3>
             <ul class="actions">
               <li>
-                <a href="#work" class="button primary large">See My Work</a>
+                <a href="#work" class="button primary large">See More</a>
               </li>
             </ul>
         </div> 
@@ -87,7 +87,7 @@
               <section>
                 <i class="icon-dark major fas fa-layer-group"></i>
                 <i class="icon-dark major fas fa-laptop"></i>
-                <p>Choose the right stack for the right project</p>
+                <p>Choose the right tools for the right project</p>
               </section>
               <section>
                 <i class="icon-dark major far fa-smile"></i>
