about-section: changed the final block of info in about me section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               </section>
               <section>
                 <i class="icon-dark major far fa-smile"></i>
-                <p>Maintain a positive mindset on the search for efficient and clear solutions to complex problems</p>
+                <p>Deploy and maintain web apps</p>
               </section>
             </div>
           </div>
