actions-ul: removed actions ul from intro section

--- a/index.html
+++ b/index.html
@@ -43,13 +43,10 @@
       <section id="intro" class="wrapper style1 fullscreen fade-up">
         <div class="inner">
             <h1>Daniel Beccaria</h1>
-            <h3 class="title-info">Front End Web Development</h3>
-            <ul class="actions">
-              <li>
-                <a href="#work" class="button primary large">See More</a>
-              </li>
-            </ul>
+            <h3 class="title-info">Web Developer</h3>
+            <a href="#work" class="button primary large centered-medium">See More</a>
         </div> 
+        
       </section>
         <section id="work" class="wrapper style1-alt works">
           <!-- Works Here -->
