fixed see more button on home page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="inner">
             <h1>Daniel Beccaria</h1>
             <h3 class="title-info">Web Developer</h3>
-            <a href="#work" class="button primary large centered-medium">See More</a>
+            <a href="#work" class="button primary">See More</a>
         </div> 
         
       </section>
