responsiveness: fixing button sizes at smaller vW

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <section id="intro" class="wrapper style1 fullscreen fade-up">
         <div class="inner">
             <h1>Daniel Beccaria</h1>
-            <h3 class="title-info">Web Developer</h3>
+            <h3 class="title-info">JS | React | NodeJS | CSS | SASS | Hosting </h3>
             <a href="#work" class="button primary">See More</a>
         </div> 
         
