primary-text: removed primary-text class from title-info

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         <div class="inner">
             <div id="typedIntro"></div>
             <h3 class="title-info animate__animated animate__backInDown">
-              <span class="primary-text animate__animated animate__rollIn animate__slow">| JS |</span>
+              <span class="animate__animated animate__rollIn animate__slow">| JS |</span>
               <span class="animate__animated animate__rollIn animate__delay-2s">React |</span>
               <span class="animate__animated animate__rollIn animate__delay-3s">NodeJS |</span>
               <span class="animate__animated animate__rollIn animate__delay-4s">CSS |</span>
