--- a/src/index.html
+++ b/src/index.html
@@ -37,14 +37,15 @@
     </section>
    <main id="wrapper">
       <section id="intro" class="wrapper style1 fullscreen fade-up">
+        <div class="sp-pixel animate__animated animate__wobble animate__delay-5s"></div>
         <div class="inner">
             <div id="typedIntro"></div>
-            <h3 class="title-info animate__animated animate__backInDown">
-              <span class="animate__animated animate__rollIn animate__slow">| JS |</span>
-              <span class="animate__animated animate__rollIn animate__delay-2s">React |</span>
-              <span class="animate__animated animate__rollIn animate__delay-3s">NodeJS |</span>
-              <span class="animate__animated animate__rollIn animate__delay-4s">CSS |</span>
-            </h3>
+            <div class="title-info-container">
+              <h4 class="title-info animate__animated animate__backInDown animate__faster">JS</h4>
+              <h4 class="title-info animate__animated animate__backInDown animate__faster animate__delay-1s"> React</h4>
+              <h4 class="title-info animate__animated animate__backInDown animate__faster animate__delay-2s"> NodeJS</h4>
+              <h4 class="title-info animate__animated animate__backInDown animate__faster animate__delay-3s"> Webpack</h4>
+            </div>
             <a href="#work" class="button primary">See More</a>
         </div> 
         
