imageDimensions: making images fit on all screen sizes

--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,12 @@
                 <a href="assets/resume/DJBResume_WebDev.pdf" target="_blank">Resume</a>
               </li>
             <li id="button">
-              <a href="https://www.linkedin.com/in/daniel-beccaria-29270293/" target="_blank">
+              <a href="https://www.linkedin.com/in/daniel-beccaria-29270293/" target="_blank" rel="noopener noreferrer">
                 LinkedIn
               </a>
             </li>
             <li id="button">
-              <a href="https://github.com/timegated" target="_blank">
+              <a href="https://github.com/timegated" target="_blank" rel="noopener noreferrer">
                 GitHub
               </a>
             </li>
