icons: made icons larger throughout the page

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
               <h4 class="title-info animate__animated animate__backInDown animate__faster animate__delay-2s"> NodeJS</h4>
               <h4 class="title-info animate__animated animate__backInDown animate__faster animate__delay-3s"> Webpack</h4>
             </div>
-            <a href="#work" class="button primary">See More</a>
+            <a href="#work" class="button primary large">See More</a>
         </div> 
         
       </section>
@@ -62,33 +62,33 @@
             <h2>What I Do:</h2>
             <div class="features">
               <section>
-                <i class="icon-dark major fab fa-html5"></i>
-                <i class="icon-dark major fab fa-css3"></i>
-                <i class="icon-dark major fab fa-js"></i>
+                <i class="icon fab fa-html5"></i>
+                <i class="icon fab fa-css3"></i>
+                <i class="icon fab fa-js"></i>
                 <p>Create responsive web pages with html, css, and javascript.</p>
               </section>
               <section>
-                <i class="icon-dark major fab fa-react"></i>
-                <i class="icon-dark major fab fa-node-js"></i>
+                <i class="icon fab fa-react"></i>
+                <i class="icon fab fa-node-js"></i>
                 <p>Build REST API's and user interfaces with React and NodeJS.</p>
               </section>
               <section>
-                <i class="icon-dark major fas fa-database"></i>
-                <p>CRUD operations with MongoDB (or SQL).</p>
+                <i class="icon fas fa-database"></i>
+                <p>Configure databases such as MongoDB or SQL</p>
               </section>
               <section>
-                <i class="icon-dark major fas fa-user-friends"></i>
-                <i class="icon-dark major fas fa-clipboard-list"></i>
-                <i class="icon-dark major fas fa-angle-double-right"></i>
-                <p>Collaborate with others where possible</p>
+                <i class="icon fas fa-user-friends"></i>
+                <i class="icon fas fa-clipboard-list"></i>
+                <i class="icon fas fa-angle-double-right"></i>
+                <p>Collaborate with others</p>
               </section>
               <section>
-                <i class="icon-dark major fas fa-layer-group"></i>
-                <i class="icon-dark major fas fa-laptop"></i>
+                <i class="icon fas fa-layer-group"></i>
+                <i class="icon fas fa-laptop"></i>
                 <p>Choose the right tools for the right project</p>
               </section>
               <section>
-                <i class="icon-dark major far fa-smile"></i>
+                <i class="icon far fa-smile"></i>
                 <p>Deploy and maintain web apps</p>
               </section>
             </div>
