--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
               <a href="#about" class="sidebar-link">About</a>
             </li>
               <li id="button">
-                <a href="assets/resume/DJBResume_WebDev.pdf" target="_blank">Resume</a>
+                <a href="" target="_blank">Resume</a>
               </li>
             <li id="button">
               <a href="https://www.linkedin.com/in/daniel-beccaria-29270293/" target="_blank" rel="noopener noreferrer">
