added responsive profile picture

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Old Menu -->
     <section id="sidebar">
-      <div class="inner">
+      <div id="profile" class="inner">
         <nav>
           <ul>
             <li id="button">
@@ -40,10 +40,6 @@
         <div class="inner">
             <div id="typedIntro"></div>
             <div class="title-info-container">
-              <h4 class="title-info animate__animated animate__backInDown animate__faster">JS</h4>
-              <h4 class="title-info animate__animated animate__backInDown animate__faster animate__delay-1s"> React</h4>
-              <h4 class="title-info animate__animated animate__backInDown animate__faster animate__delay-2s"> NodeJS</h4>
-              <h4 class="title-info animate__animated animate__backInDown animate__faster animate__delay-3s"> Webpack</h4>
             </div>
             <a href="#work" class="button primary large">See More</a>
         </div> 
