--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Daniel Beccaria Web Development">
+    <meta name="keywords" content="react, javascript, web development, full stack, frontend, junior developer">
     <title>DJB</title>
 </head>
 <body>
