reworking sidebar and colors

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
         <section id="work" class="wrapper style1-alt works">
           <!-- Selected Works Here -->
         </section>
-        <section id="about" class="wrapper style1">
+        <section id="about" class="wrapper style1-alt">
           <div class="inner">
             <h2>About</h2>
             <p>Staying up to date with current front-end technology while sticking with what works. Always
