improved: breathing room for projects, added background for intro section, got functions file working in scss

--- a/src/index.html
+++ b/src/index.html
@@ -46,10 +46,10 @@
         </div> 
         
       </section>
-        <section id="work" class="wrapper style1-alt works">
+        <section id="work" class="wrapper works">
           <!-- Selected Works Here -->
         </section>
-        <section id="about" class="wrapper style1-alt">
+        <section id="about" class="wrapper fade-up">
           <div class="inner">
             <h2>About</h2>
             <p>Staying up to date with current front-end technology while sticking with what works. Always
