--- a/src/index.html
+++ b/src/index.html
@@ -1,97 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Daniel Beccaria Web Development">
-    <meta name="keywords" content="react, javascript, web development, full stack, frontend, junior developer">
-    <title>DJB</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Daniel Beccaria Web Development">
+  <meta name="keywords" content="react, javascript, web development, full stack, frontend, junior developer">
+  <title>DJB</title>
 </head>
+
 <body>
   <!-- Old Menu -->
-    <section id="sidebar">
-      <div id="profile" class="inner">
-        <nav>
-          <ul>
-            <li id="button">
-              <a href="#work" class="sidebar-link">Work</a>
-            </li>
-            <li id="button">
-              <a href="#about" class="sidebar-link">About</a>
-            </li>
-              <li id="button">
-                <a href="" target="_blank">Resume</a>
-              </li>
-            <li id="button">
-              <a href="https://www.linkedin.com/in/daniel-beccaria-29270293/" target="_blank" rel="noopener noreferrer">
-                LinkedIn
-              </a>
-            </li>
-            <li id="button">
-              <a href="https://github.com/timegated" target="_blank" rel="noopener noreferrer">
-                GitHub
-              </a>
-            </li>
-          </ul>
-        </nav>
+  <section id="sidebar">
+    <div id="profile" class="inner">
+      <nav>
+        <ul>
+          <li id="button">
+            <a href="#work" class="sidebar-link">Work</a>
+          </li>
+          <li id="button">
+            <a href="#about" class="sidebar-link">About</a>
+          </li>
+          <li id="button">
+            <a href="" target="_blank">Resume</a>
+          </li>
+          <li id="button">
+            <a href="https://www.linkedin.com/in/daniel-beccaria-29270293/" target="_blank" rel="noopener noreferrer">
+              LinkedIn
+            </a>
+          </li>
+          <li id="button">
+            <a href="https://github.com/timegated" target="_blank" rel="noopener noreferrer">
+              GitHub
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </section>
+  <main id="wrapper">
+    <section id="intro" class="wrapper style1 fullscreen fade-up">
+      <div class="inner">
+        <div id="typedIntro"></div>
+        <div class="title-info-container">
+        </div>
+        <a href="#work" class="button cta large">See More</a>
+      </div>
+
+    </section>
+    <section id="work" class="wrapper works">
+      <!-- Selected Works Here -->
+    </section>
+    <section id="about" class="wrapper style1 fade-up">
+      <div class="inner">
+        <div class="inner__about-section">
+          <h2>About</h2>
+          <p class="about-p">Staying up to date with current front-end technology while sticking with what works. Always
+            curious to try new tech and apply different approaches. Currently focused on learning the core principles of
+            HTML, CSS, and Javascript with React being my framework of choice for data-driven applications. For design
+            systems I generally prefer a scalable approach to styling my work, I organized all the CSS for this
+            portfolio page with the "Scalable and Modular CSS" approach. Ultimately keeping code organized and
+            human-readable is a big goal for me as I constantly seek opportunites to work with others, where
+            communication both with and without code becomes paramount.</p>
+        </div>
+        <h2>What I Do:</h2>
+        <div class="features">
+          <section>
+            <i class="icon fab fa-html5"></i>
+            <i class="icon fab fa-css3"></i>
+            <i class="icon fab fa-js"></i>
+            <p>Create responsive web pages with html, css, and javascript.</p>
+          </section>
+          <section>
+            <i class="icon fab fa-react"></i>
+            <i class="icon fab fa-node-js"></i>
+            <p>Build REST API's and user interfaces with React and NodeJS.</p>
+          </section>
+          <section>
+            <i class="icon fas fa-database"></i>
+            <p>Configure databases such as MongoDB or SQL</p>
+          </section>
+          <section>
+            <i class="icon fas fa-user-friends"></i>
+            <i class="icon fas fa-clipboard-list"></i>
+            <i class="icon fas fa-angle-double-right"></i>
+            <p>Collaborate with others</p>
+          </section>
+          <section>
+            <i class="icon fas fa-layer-group"></i>
+            <i class="icon fas fa-laptop"></i>
+            <p>Choose the right tools for the right project</p>
+          </section>
+          <section>
+            <i class="icon far fa-smile"></i>
+            <p>Deploy and maintain web apps</p>
+          </section>
+        </div>
       </div>
     </section>
-   <main id="wrapper">
-      <section id="intro" class="wrapper style1 fullscreen fade-up">
-        <div class="inner">
-            <div id="typedIntro"></div>
-            <div class="title-info-container">
-            </div>
-            <a href="#work" class="button primary large">See More</a>
-        </div> 
-        
-      </section>
-        <section id="work" class="wrapper works">
-          <!-- Selected Works Here -->
-        </section>
-        <section id="about" class="wrapper fade-up">
-          <div class="inner">
-            <h2>About</h2>
-            <p>Staying up to date with current front-end technology while sticking with what works. Always
-            curious to try new tech and apply different approaches. I find the process of creating
-            functioning web applications
-            consistently rewarding.</p>
-            <h2>What I Do:</h2>
-            <div class="features">
-              <section>
-                <i class="icon fab fa-html5"></i>
-                <i class="icon fab fa-css3"></i>
-                <i class="icon fab fa-js"></i>
-                <p>Create responsive web pages with html, css, and javascript.</p>
-              </section>
-              <section>
-                <i class="icon fab fa-react"></i>
-                <i class="icon fab fa-node-js"></i>
-                <p>Build REST API's and user interfaces with React and NodeJS.</p>
-              </section>
-              <section>
-                <i class="icon fas fa-database"></i>
-                <p>Configure databases such as MongoDB or SQL</p>
-              </section>
-              <section>
-                <i class="icon fas fa-user-friends"></i>
-                <i class="icon fas fa-clipboard-list"></i>
-                <i class="icon fas fa-angle-double-right"></i>
-                <p>Collaborate with others</p>
-              </section>
-              <section>
-                <i class="icon fas fa-layer-group"></i>
-                <i class="icon fas fa-laptop"></i>
-                <p>Choose the right tools for the right project</p>
-              </section>
-              <section>
-                <i class="icon far fa-smile"></i>
-                <p>Deploy and maintain web apps</p>
-              </section>
-            </div>
-          </div>
-        </section>
-   </main>
+  </main>
   <script src="https://kit.fontawesome.com/7e8ea69633.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
