img: images take up full width at smaller screen sizes, reformatted copy inside of works section

--- a/src/index.html
+++ b/src/index.html
@@ -58,10 +58,9 @@
           <p class="about-p">Staying up to date with current front-end technology while sticking with what works. Always
             curious to try new tech and apply different approaches. Currently focused on learning the core principles of
             HTML, CSS, and Javascript with React being my framework of choice for data-driven applications. For design
-            systems I generally prefer a scalable approach to styling my work, I organized all the CSS for this
-            portfolio page with the "Scalable and Modular CSS" approach. Ultimately keeping code organized and
-            human-readable is a big goal for me as I constantly seek opportunites to work with others, where
-            communication both with and without code becomes paramount.</p>
+            systems I generally prefer a scalable approach to styling my work. Ultimately keeping code organized and
+            human-readable is a big goal for me as I constantly seek opportunites to work with others where
+            communication both with and without code is key.</p>
         </div>
         <h2>What I Do:</h2>
         <div class="features">
