layout: moved about section up above works, changed bg on works, what do section is now last

--- a/src/index.html
+++ b/src/index.html
@@ -39,19 +39,15 @@
     </div>
   </section>
   <main id="wrapper">
-    <section id="intro" class="wrapper style1 fullscreen fade-up">
+    <section id="intro" class="wrapper style1 fullscreen">
       <div class="inner">
         <div id="typedIntro"></div>
         <div class="title-info-container">
         </div>
         <a href="#work" class="button cta large">See More</a>
       </div>
-
     </section>
-    <section id="work" class="wrapper works">
-      <!-- Selected Works Here -->
-    </section>
-    <section id="about" class="wrapper style1 fade-up">
+    <section id="about" class="wrapper style1">
       <div class="inner">
         <div class="inner__about-section">
           <h2>About</h2>
@@ -62,40 +58,49 @@
             human-readable is a big goal for me as I constantly seek opportunites to work with others where
             communication both with and without code is key.</p>
         </div>
-        <h2>What I Do:</h2>
-        <div class="features">
-          <section>
-            <i class="icon fab fa-html5"></i>
-            <i class="icon fab fa-css3"></i>
-            <i class="icon fab fa-js"></i>
-            <p>Create responsive web pages with html, css, and javascript.</p>
-          </section>
-          <section>
-            <i class="icon fab fa-react"></i>
-            <i class="icon fab fa-node-js"></i>
-            <p>Build REST API's and user interfaces with React and NodeJS.</p>
-          </section>
-          <section>
-            <i class="icon fas fa-database"></i>
-            <p>Configure databases such as MongoDB or SQL</p>
-          </section>
-          <section>
-            <i class="icon fas fa-user-friends"></i>
-            <i class="icon fas fa-clipboard-list"></i>
-            <i class="icon fas fa-angle-double-right"></i>
-            <p>Collaborate with others</p>
-          </section>
-          <section>
-            <i class="icon fas fa-layer-group"></i>
-            <i class="icon fas fa-laptop"></i>
-            <p>Choose the right tools for the right project</p>
-          </section>
-          <section>
-            <i class="icon far fa-smile"></i>
-            <p>Deploy and maintain web apps</p>
-          </section>
-        </div>
+    </section>
+    <section id="work" class="wrapper style3 works">
+      <!-- Selected Works Here -->
+    </section>
+    <section id="whatdo" class="wrapper style1 whatdo">
+      <div class="inner">
+        <div class="inner__whatdo">
+          <h2>What I Do:</h2>
+      <div class="features">
+        <section>
+          <i class="icon fab fa-html5"></i>
+          <i class="icon fab fa-css3"></i>
+          <i class="icon fab fa-js"></i>
+          <p>Create responsive web pages with html, css, and javascript.</p>
+        </section>
+        <section>
+          <i class="icon fab fa-react"></i>
+          <i class="icon fab fa-node-js"></i>
+          <p>Build REST API's and user interfaces with React and NodeJS.</p>
+        </section>
+        <section>
+          <i class="icon fas fa-database"></i>
+          <p>Configure databases such as MongoDB or SQL</p>
+        </section>
+        <section>
+          <i class="icon fas fa-user-friends"></i>
+          <i class="icon fas fa-clipboard-list"></i>
+          <i class="icon fas fa-angle-double-right"></i>
+          <p>Collaborate with others</p>
+        </section>
+        <section>
+          <i class="icon fas fa-layer-group"></i>
+          <i class="icon fas fa-laptop"></i>
+          <p>Choose the right tools for the right project</p>
+        </section>
+        <section>
+          <i class="icon far fa-smile"></i>
+          <p>Deploy and maintain web apps</p>
+        </section>
       </div>
+    </div>
+    </div>
+        </div>
     </section>
   </main>
   <script src="https://kit.fontawesome.com/7e8ea69633.js" crossorigin="anonymous"></script>
