Restructured js files to something more coherent

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       </nav>
     </div>
   </section>
-  <main id="wrapper">
+  <main id="wrapper" class="scroll-area">
     <section id="intro" class="wrapper style1 fullscreen">
       <div class="inner">
         <div id="typedIntro"></div>
