--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
   <!-- Old Menu -->
   <section id="sidebar">
     <div id="profile" class="inner">
+      <div>
+        <img src="./images/profilepic4.png" alt="">
+      </div>
       <nav>
         <ul>
           <li id="button">
@@ -62,6 +65,7 @@
     <section id="work" class="wrapper style3 works">
       <!-- Selected Works Here -->
     </section>
+    <!-- What I Do -->
     <section id="whatdo" class="wrapper style1 whatdo">
       <div class="inner">
         <div class="inner__whatdo">
