Colors: toning down some of the loudness of the background-colors

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <section id="sidebar">
     <div id="profile" class="inner">
       <div>
-        <img src="./images/profilepic4.png" alt="">
+        <img src="./images/intro-triangle.svg" alt="">
       </div>
       <nav>
         <ul>
@@ -62,7 +62,7 @@
             communication both with and without code is key.</p>
         </div>
     </section>
-    <section id="work" class="wrapper style3 works">
+    <section id="work" class="wrapper works">
       <!-- Selected Works Here -->
     </section>
     <!-- What I Do -->
